# CppCacheTemplate

./: .gitignore  CMakeLists.txt  teachstack.json
modules/HelloWorld/Adder/exercise/: Cargo.toml
modules/HelloWorld/Adder/exercise/src/: main.rs
modules/HelloWorld/Adder/exercise/src/adder/: adder.rs
modules/HelloWorld/Adder/exercise/tests/: test_adds.rs
modules/HelloWorld/Adder/instructions/: instruction.md
modules/HelloWorld/HelloWorld/exercise/: Cargo.toml
modules/HelloWorld/HelloWorld/exercise/src/: main.cpp  main.rs
modules/HelloWorld/HelloWorld/exercise/src/adder/: adder.rs
modules/HelloWorld/HelloWorld/instructions/: instruction.md
modules/HelloWorld/class_new/: CMakeLists.txt
modules/HelloWorld/class_new/exercise/: main.cpp
modules/HelloWorld/class_new/instructions/: instruction.md
modules/HelloWorld/class_new/tests/: tests.cpp
modules/HelloWorld/final_cache/: CMakeLists.txt
modules/HelloWorld/final_cache/exercise/: caches.h  main.cpp  test_input.txt  test_output2.txt
modules/HelloWorld/final_cache/instructions/: instruction.md
modules/HelloWorld/final_cache/tests/: tests.cpp
modules/HelloWorld/first_templates/: CMakeLists.txt
modules/HelloWorld/first_templates/exercise/: main.cpp
modules/HelloWorld/first_templates/instructions/: instruction.md
modules/HelloWorld/first_templates/tests/: tests.cpp
modules/HelloWorld/instructions/: instruction.md
modules/HelloWorld/specialisation_templates/: CMakeLists.txt
modules/HelloWorld/specialisation_templates/exercise/: main.cpp
modules/HelloWorld/specialisation_templates/instructions/: instruction.md
modules/HelloWorld/specialisation_templates/tests/: tests.cpp
modules/HelloWorld/step1_cache/: CMakeLists.txt
modules/HelloWorld/step1_cache/exercise/: caches.h  test_input.txt  test_output.txt
modules/HelloWorld/step1_cache/instructions/: instruction.md
modules/HelloWorld/step1_cache/tests/: tests.cpp
modules/HelloWorld/step1_helloworld/: CMakeLists.txt
modules/HelloWorld/step1_helloworld/instructions/: instruction.md
modules/HelloWorld/step1_helloworld/tests/: tests.cpp
modules/HelloWorld/step2_cache/: CMakeLists.txt
modules/HelloWorld/step2_cache/exercise/: caches.h  main.cpp
modules/HelloWorld/step2_cache/instructions/: instruction.md
modules/HelloWorld/step2_cache/tests/: tests.cpp
modules/HelloWorld/step3_cache/: CMakeLists.txt
modules/HelloWorld/step3_cache/exercise/: caches.h
modules/HelloWorld/step3_cache/instructions/: instruction.md
modules/HelloWorld/step3_cache/tests/: tests.cpp
modules/HelloWorld/step4_cache/: CMakeLists.txt
modules/HelloWorld/step4_cache/exercise/: caches.h
modules/HelloWorld/step4_cache/instructions/: instruction.md
modules/HelloWorld/step4_cache/tests/: tests.cpp
modules/HelloWorld/step5_cache/: CMakeLists.txt
modules/HelloWorld/step5_cache/exercise/: caches.h  main.cpp
modules/HelloWorld/step5_cache/instructions/: instruction.md
modules/HelloWorld/step5_cache/tests/: tests.cpp
modules/HelloWorld/step6_cache/: CMakeLists.txt
modules/HelloWorld/step6_cache/exercise/: caches.h
modules/HelloWorld/step6_cache/instructions/: instruction.md
modules/HelloWorld/step6_cache/tests/: tests.cpp
modules/HelloWorld/tests/: test_hello_world.rs
modules/include/: utilities.h
